--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.huggingface.api": "file:C:/Users/user/Desktop/unity-api-main",
     "com.unity.collab-proxy": "2.0.1",
     "com.unity.feature.ar": "1.0.0",
     "com.unity.feature.development": "1.0.1",
